Figured out how to fix the text logo and the menu bar to their corners, when the viewport scale changes. I still can't figure out how to scale the dimensions of the assets up and down as the viewport changes though! I've rant out of time now, I need to move onto the next stage of the project. Flex boxes and responsive design is definately something that I need to look into in future, but it's far too complicated and there's far too much info on the subject for me to make sense of it in such a short space of time.

--- a/_css/parallax-stylesheet.css
+++ b/_css/parallax-stylesheet.css
@@ -1,3 +1,11 @@
+/*Style sheets for the parallax image logo on main page.*/
+
+/*
+  .scene {
+    justify-content: center;
+    margin: 150px;
+}*/
+
   .parallax {
     display: -webkit-box;
     display: flex;
@@ -5,9 +13,10 @@
             justify-content: center;
     -webkit-box-align: center;
             align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    position: relative;
+    justify-content: center;
   }
 
   .layer {
@@ -20,39 +29,39 @@
 
   .noodle-2{
     position: absolute;
-    max-height: 18vh;
-    width: auto;
+    max-height: 18%;
+    max-width: auto;
     top: calc(50% - 18px);
     left: calc(50% + 135px);
 }
 
   .tofu-1{
     position: absolute;
-    max-height: 6vh;
-    width: auto;
+    max-height: 6%;
+    max-width: auto;
     top: calc(50% - 318px);
     left: calc(50% + 116px);
 }
 
  .onion-1{
     position: absolute;
-    max-height: 6vh;
-    width: auto;
+    max-height: 6%;
+    max-width: auto;
     top: calc(50% + 14px);
     left: calc(50% - 320px);
 }
 
   .bowl{
     position: absolute;
-    height: 34vh;
-    width: auto;
+    max-height: 34%;
+    max-width: auto;
     top: calc(50% - 440px);
     left: calc(50% - 410px);
 }
 
   .seaweed-1{
     position: absolute;
-    max-height: 14vh;
+    max-height: 14%;
     max-width: auto;
     top: calc(50% - 234px);
     left: calc(50% - 265px);
@@ -60,80 +69,80 @@
 
   .face{
     position: absolute;
-    max-height: 35vh;
-    width: auto;
+    max-height: 35%;
+    max-width: auto;
     top: calc(50% - 70px);
     left: calc(50% - 189px);
 }
 
   .shroom-1{
     position: absolute;
-    max-height: 8vh;
-    width: auto;
+    max-height: 8%;
+    max-width:  width: auto;
     top: calc(50% - 20px);
     left: calc(50% + 64px);
 }
 
   .tofu-2{
     position: absolute;
-    max-height: 6vh;
-    width: auto;
+    max-height: 6%;
+    max-width: auto;
     top: calc(50% - 26px);
     left: calc(50% + 256px);
 }
 
   .noodle-1{
     position: absolute;
-    max-height: 39vh;
-    width: auto;
+    max-height: 39%;
+    max-width: auto;
     top: calc(50% - 322px);
     left: calc(50% - 235px);
 }
 
   .onion-2{
     position: absolute;
-    max-height: 6vh;
-    width: auto;
+    max-height: 6%;
+    max-width: auto;
     top: calc(50% - 206px);
     left: calc(50% + 258px);
 }
 
   .seaweed-2{
     position: absolute;
-    max-height: 15vh;
-    width: auto;        
+    max-height: 15%;
+    max-width: auto;        
     top: calc(50% - 88px);
     left: calc(50% - 10px);
 }
 
   .shroom-3{
     position: absolute;
-    max-height: 8vh;
-    width: auto;
+    max-height: 8%;
+    max-width: auto;
     top: calc(50% - 282px);
     left: calc(50% - 114px);
 }
 
   .tofu-3{
     position: absolute;
-    max-height: 6vh;
-    width: auto;         
+    max-height: 6%;
+    max-width: auto;         
     top: calc(50% + 108px);
     left: calc(50% - 360px);
 }
 
   .noodle-3{
     position: absolute;
-    max-height: 20vh;
-      width: auto;
+    max-height: 20%;
+    max-width: auto;
     top: calc(50% - 14px);
     left: calc(50% - 276px);
 }
 
   .shroom-2{
     position: absolute;
-    max-height: 8vh;
-    width: auto;
+    max-height: 8%;
+    max-width: auto;
     top: calc(50% - 46px);
     left: calc(50% - 246px);
 }
