--- a/_css/theme.css
+++ b/_css/theme.css
@@ -1,138 +1,55 @@
 @charset "UTF-8";
-body {
-    background-color: #FFFFFF;
+
+  body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 9000px;
 }
 
-.header-container {
-    position: fixed;
-    width:100%;
-    height: 150px;
-    top: 0px;
-    padding: 0;
-}
-
-#txt-logo { 
-    position: relative;
-    top: 70px;
-    left: 1645px;
-    justify-content: flex-end;
-    display: flex;
-    padding: 0;
-    /*padding: 19px;*/
-}
-
-main {
+  header {
+    position: absolute;
+    height: auto;
     width: 100%;
-    align-items: center;
-    overflow: hidden;
-    justify-content: center;
-    display: flex;
-    padding: 0;
+    
 }
 
-.footer-container {
+  #txt-logo {
     position: fixed;
-    width: 100%;
-    height: 150px;
-    top: 930px;
-    padding: 0;
-    /*justify-items: flex-end;
-    flex-direction: row;
-    /*display: flex;*/*/
+    top: 0;
+    right: 0;
+    padding: 65px;
 }
 
-.menu {
-    position: relative;
-    left: 70px;
-    padding: 0;
-}
-
-.copyright {
-    position: relative;
-    text-align: center;
-    font-family: 'Lato';
-    font-weight: normal;
-    font-size: 20px;
-    color: #8D8D8D;
-    padding: 0;
-    overflow: 0;
-}
-
-/*
-footer p{
-    /*position: relative;
-    font-family: 'Lato';
-    font-weight: normal;
-    font-size: 20px;
-    text-align: center;
-    color: #8D8D8D;
-    flex-grow: 1;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 65px;
-}
-*/
-
-/* @font-face {
-    font-family:"Lato";
-} */
-
-/*.paragraph {
-    font-size: 20px;
-    line-height: 30px;
-    /* font-family: 'Lato', ;
-}
-
-body {
-    background-color: #FFFFFF;
-    margin: 0;
-    padding: 0;
-    width:100%;
-    height:100%;
-    overflow: hidden;
-}
-
-.item {
-    /* position: absolute; 
-}
-
-header {
-    justify-content: flex-end;
-    display: flex;
-    padding: 19px;
-}
-
-main {
-    display: flex;
+  main {
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
 
-footer {
+  footer {
+    position: fixed;
+    height: auto;
+    width: 100%;
+    bottom: 0;
+}
+
+  .menu {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 65px;
+}
+
+  footer p {
+    position: relative;
+    bottom: 0;
+    text-align: center;
     font-family: 'Lato';
     font-weight: normal;
     font-size: 20px;
-    bottom: 0;
     color: #8D8D8D;
-    display: flex;
-    height: 44px;
-    position: fixed;
-    padding: 35px;
-    width: 100%;
-    justify-items: flex-end;
-    flex-direction: row;
 }
 
-footer p {
-    flex-grow: 1;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 65px;
-}*/
+
+
